[package]
name = "gitcurl"
version = "0.1.1"
edition = "2021"
authors = ["shadawck <shadawck@protonmail.com>"]
description = "Clone a directory without using Git but using Curl"
documentation = "https://docs.rs/gitcurl"
readme = "./README.md"
repository = "https://github.com/shadawck/gitcurl"
homepage = "https://github.com/shadawck/gitcurl"
license = "MIT OR Apache-2.0"
keywords = ["cli", "git", "curl", "pentest", "utility"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "3.2.22", features = ["cargo"] }
fs_extra = "1.2.0"
http = "0.2.8"
zip = "0.6.2"
curl = { version = "0.4.44", default-features = false, features = ["rustls"] }
